@@ -190,7 +190,6 @@ public class OffenseStats {
             .setSide(EffectSides.Source)
             .setUsesMoreMultiplier()
             .addCondition(x -> StatConditions.ELEMENT_MATCH_STAT)
-            .addCondition(StatConditions.ATTACK_TYPE_MATCHES.get(AttackType.hit))
             .addEffect(StatEffects.Layers.ADDITIVE_DAMAGE_PERCENT)
             .setLocName(x -> x.dmgName + " Weapon Damage")
             .setLocDesc(x -> "")
@@ -267,7 +266,6 @@ public class OffenseStats {
             .worksWithEvent(DamageEvent.ID)
             .setPriority(StatPriority.Damage.BEFORE_HIT_PREVENTION)
             .setSide(EffectSides.Source)
-            .addCondition(StatConditions.ATTACK_TYPE_MATCHES.get(AttackType.hit))
             .addEffect(StatEffects.SET_ACCURACY)
             .setLocName(x -> "Accuracy")
             .setLocDesc(x -> "Increases your chance to hit, low accuracy also causes crits to fail. Specifically it decreases opponent's chance to dodge")
@@ -421,7 +419,6 @@ public class OffenseStats {
             .worksWithEvent(DamageEvent.ID)
             .setPriority(StatPriority.Damage.DAMAGE_LAYERS)
             .setSide(EffectSides.Source)
-            .addCondition(StatConditions.ATTACK_TYPE_MATCHES.get(AttackType.hit))
             .addEffect(StatEffects.Layers.DOUBLE_DAMAGE)
             .setLocName(x -> "Double Attack Damage Chance")
             .setLocDesc(x -> "")
